sakura.css
/*! sakura.css 0.3.0 | MIT License */
/*! github.com/miteshninja/sakura */

html {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 1.6;
    color: #4a4a4a;
    background-color: #f9f9f9;
}

body {
    max-width: 750px;
    margin: auto;
    padding: 1em;
}

@media only screen and (min-width: 641px){
    html {
        font-size: 18px;
        line-height: 1.6;
    }
}

@media only screen and (min-width: 961px){
    html {
        font-size: 19px;
        line-height: 1.5;
    }
}

p {
    text-align: justify;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
}

ul {
    padding-left: 1.4em;
}

li {
    margin-bottom: 0.4em;
}

blockquote {
    font-style: italic;
    padding-left: 1em;
    border-left: 3px solid #982c61;
}

a {
    text-decoration: none;
    color: #2c8898;
    border-bottom: 1px solid #2e9db0;
}

a:hover {
    color: #982c61;
    border-bottom: 1px solid #b83374;
}

pre {
    background-color: #f1f1f1;
    display: block;
    padding: 1em;
    overflow-x: scroll;
}

code {
    font-size: 90%;
    padding: 0 0.5em;
    background-color: #f1f1f1;
}

pre > code {
    padding: 0;
    background-color: transparent;
}

/* Buttons, forms and input*/
input, textarea {
    border: 1px solid #2e9db0;
}

input:focus, textarea:focus {
    border: 1px solid #b83374;
    /*outline: 0;*/
}

select, button, input[type="submit"], input[type="reset"], input[type="button"] {
    margin-bottom: 0.5em;
    padding: 0 1em;
    background-color: #2e9db0;
    border: 1px solid #2e9db0;
    color: #f9f9f9;
    line-height: inherit;
    cursor: pointer;
}

button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {
    background-color: #b83374;
    border: 1px solid #b83374;
    color: #f9f9f9;
    line-height: inherit;
}


button:active, input[type="submit"]:active, input[type="reset"]:active, input[type="button"]:active {
    background-color: #982c61;
    border: 1px solid #982c61;
}

/* ================================================================= */
/* Replace all occurances of these colors to change the entire theme! */
/* Shades of 2 alternate colors - duotones*/
.sakura-blossom {
    color: #982c61;
}
.sakura-blossom-light {
    color: #d6a2bb;
}
a.sakura-blossom:hover {
    color: #2e9db0;
}
.sakura-fade {
    color: #2c8898;
}
.sakura-fade-light{
    color: #67c7d8;
}
a.sakura-fade:hover {
    color: #b83374;
}

.background-color {
    background-color: #f9f9f9;
}
.background-color-dark {
    background-color: #f1f1f1;
}
.text-color {
    color: #4a4a4a;
}
/* ================================================================= */

